--- a/src/app/anime/[id]/anime.css
+++ b/src/app/anime/[id]/anime.css
@@ -50,7 +50,15 @@
     font-weight: 700;
 }
 
+.anime_central_body_genres{
+    color: #D1D1D1;
+    margin-top: 5px;
+    font-size: 14px;
+    font-weight: normal;
+}
+
 .anime_central_body_description {
+    margin-top: 10px;
     font-size: 18px;
     font-weight: normal;
 }
