--- a/src/app/welcome/welcomePage.css
+++ b/src/app/welcome/welcomePage.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     height: calc(100vh - 150px);
     overflow: hidden;
     width: 100%;
