some functions have been moved to function.js a color change was made depending on the rating added animation of loading another page fixed removal of [ТВ] from release titles

--- a/src/components/catalogList/catalogList.css
+++ b/src/components/catalogList/catalogList.css
@@ -22,6 +22,10 @@
     transition: .3s;
 }
 
+.catalog_button:active{
+    transform: translateX(2px);
+}
+
 .catalog_button.active {
     fill: #959595;
 }
