--- a/src/app/anime/[id]/anime.css
+++ b/src/app/anime/[id]/anime.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .anime_main_div {
     display: flex;
@@ -41,7 +42,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 50px;
-    width: 60%;
+    width: 100%;
 }
 
 .anime_central_body_title {
@@ -51,6 +52,8 @@
 }
 
 .anime_central_body_genres{
+    display: flex;
+    align-items: center;
     color: #D1D1D1;
     margin-top: 5px;
     font-size: 14px;
@@ -71,13 +74,49 @@
 .anime_right_body {
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
+    align-items: center;
+    margin-left: 30px;
     width: fit-content;
 }
 
 .search_rank.anime {
-    text-align: end;
+    text-align: center;
     color: #41d009;
     font-size: 32px;
     font-weight: bold;
+}
+
+.anime_episode_count{
+    margin-top: 5px;
+    font-size: 14px;
+}
+
+.anime_status {
+    display: flex;
+    stroke: white;
+    margin-right: 5px;
+    align-items: center;
+    justify-content: center;
+}
+
+.add_rating{
+    font-family: Rubik, sans-serif;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 18px;
+    font-size: 13px;
+    width: fit-content;
+    height: fit-content;
+    white-space: nowrap;
+    border-radius: 15px;
+    background: #3e3e3e;
+    margin-top: 10px;
+    user-select: none;
+    transition: .3s;
+}
+
+.add_rating:hover{
+    background: #2a2a2a;
 }
