--- a/src/app/welcome/welcomePage.css
+++ b/src/app/welcome/welcomePage.css
@@ -34,6 +34,6 @@
     font-size: 16px;
     color: white;
     -webkit-font-smoothing: antialiased;
-    font-weight: bold;
+    font-weight: 500;
 }
 
