--- a/src/components/auth/authContainer.css
+++ b/src/components/auth/authContainer.css
@@ -22,8 +22,9 @@
     left: 30px;
     fill: #D1D1D1;
     border-radius: 50%;
-    padding: 5px;
+    padding: 15px;
     transition: .3s;
+    cursor: pointer;
 }
 
 .authBackButton:hover{
