--- a/src/components/catalogList/catalogList.css
+++ b/src/components/catalogList/catalogList.css
@@ -139,6 +139,19 @@
     scale: 1.03;
     background: #2f2f2f;
 }
+.catalog_info_watch_button.watch_together {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #1e1d1e;
+    fill: #454545;
+    cursor: pointer;
+}
+
+.catalog_info_watch_button.watch_together:hover{
+    scale: 1.05;
+    background: #2f2f2f;
+}
 
 .catalog_info_watch_button.add_to_favorites {
     display: flex;
