--- a/src/components/watch_together_kodik/watchTogetherKodik.css
+++ b/src/components/watch_together_kodik/watchTogetherKodik.css
@@ -43,7 +43,7 @@
 
 .watch_together_hud_user_list{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 30px);
     margin-top: 5px;
     overflow: scroll;
 }
