--- a/src/components/watch_together_kodik/watchTogetherKodik.css
+++ b/src/components/watch_together_kodik/watchTogetherKodik.css
@@ -3,6 +3,7 @@
 .watch_together_hud{
     height: 25%;
     width: 100%;
+    max-height: 25vh;
     background: #232323;
     padding: 15px 20px;
     transition: .8s;
@@ -62,7 +63,7 @@
 
 .watch_together_hud_user_list{
     width: 100%;
-    height: calc(100% - 30px);
+    height: calc(100% - 75px);
     margin-top: 5px;
     overflow: scroll;
 }
