--- a/src/components/catalogList/catalogList.css
+++ b/src/components/catalogList/catalogList.css
@@ -81,15 +81,13 @@
 
 .catalog_info_rank_genres_container {
     display: flex;
-    align-items: flex-end;
-    justify-content: center;
+    align-items: center;
     margin-top: 8px;
 }
 
 .catalog_info_genres {
     font-size: 15px;
     font-weight: 300;
-    margin-left: 5px;
     color: #686a6b;
     white-space: nowrap;
     z-index: 5;
