+ subscription page and some fix

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -44,6 +44,19 @@
     fill: var(--link_un_active);
 }
 
+.link.logo.subscription{
+    background-image: linear-gradient(167deg, rgba(42, 111, 237, 1) 5%, rgba(155, 97, 186, 0.7484243697478992) 100%);
+    -webkit-background-clip: text;
+    -moz-background-clip: border;
+    background-clip: text;
+    color: transparent;
+    animation: sub 1s ease-in-out forwards;
+}
+
+@keyframes sub {
+    100% {transform: translateX(-20px)}
+}
+
 
 .search_container {
     display: flex;
