--- a/src/components/catalogItem/catalogItem.css
+++ b/src/components/catalogItem/catalogItem.css
@@ -57,6 +57,10 @@
     overflow: hidden;
 }
 
+.catalog_item_description.none{
+    color: #ffffff;
+}
+
 .hovered {
     --hover: 0;
     width: 100%;
