--- a/src/components/header/accountDialog/accountDialog.css
+++ b/src/components/header/accountDialog/accountDialog.css
@@ -85,12 +85,39 @@
 }
 
 .accountDialog_container_right_body_avatar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
     width: 60px;
     height: 60px;
     border-radius: 50%;
     background: url("https://i.pinimg.com/originals/87/90/6b/87906b327d3b28fed0378fc5cd69d8d1.jpg");
-    background-size: cover;
     background-position: 50%;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.accountDialog_container_right_body_pick_avatar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: #252525;
+    opacity: 0;
+    transition: .3s;
+}
+
+.accountDialog_container_right_body_pick_avatar.active {
+    opacity: 1;
+    cursor: pointer;
+}
+
+.accountDialog_container_right_body_pick_avatar:hover{
+    opacity: 1;
+    cursor: pointer;
 }
 
 .accountDialog_container_right_body_user_name{
@@ -102,14 +129,44 @@
     margin-top: 20px;
     margin-left: 10px;
     margin-right: 10px;
-    background: #2a2a2a;
+    background: #202020;
     height: 200px;
     border-radius: 10px;
 }
 
 .accountDialog_container_right_info_block{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
+    font-family: "Noto Sans", sans-serif;
+    padding: 10px 25px;
 }
 
+.accountDialog_container_right_info_block_title{
+    font-weight: 600;
+    font-size: 12px;
+    color: #747474;
+}
+
+.accountDialog_container_right_info_block_text{
+    font-size: 14px;
+    font-weight: 500;
+    color: #ececec;
+    column-gap: 10px;
+}
+
+.accountDialog_container_right_info_block_change_button{
+    padding: 10px 20px;
+    background: #2a2a2a;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: 600;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.accountDialog_container_right_info_block_change_button:hover{
+    background: #353535;
+}
