--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,8 +44,12 @@ a {
     text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-        color-scheme: dark;
-    }
+html {
+    color-scheme: dark;
 }
+
+/*@media (prefers-color-scheme: dark) {*/
+/*    html {*/
+/*        color-scheme: dark;*/
+/*    }*/
+/*}*/
