--- a/src/components/header/accountDialog/accountDialog.css
+++ b/src/components/header/accountDialog/accountDialog.css
@@ -75,6 +75,12 @@
     background: #454545;
 }
 
+.accountDialog_container_left_body_list_item.deactivate{
+    background: #1e1e1e;
+    color: #3f3f3f;
+    cursor: auto;
+}
+
 .accountDialog_container_right_body_top_container{
     display: flex;
     width: 100%;
@@ -120,6 +126,14 @@
     cursor: pointer;
 }
 
+.accountDialog_container_right_body_pick_avatar_input{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    opacity: 0;
+}
+
 .accountDialog_container_right_body_user_name{
     margin-left: 20px;
 }
@@ -132,6 +146,7 @@
     background: #202020;
     height: 200px;
     border-radius: 10px;
+    padding-top: 10px;
 }
 
 .accountDialog_container_right_info_block{
@@ -141,13 +156,20 @@
     align-items: center;
     width: 100%;
     font-family: "Noto Sans", sans-serif;
-    padding: 10px 25px;
+    padding: 10px 15px;
+}
+
+.accountDialog_container_right_info_block.hidden{
+    opacity: 0;
 }
 
 .accountDialog_container_right_info_block_title{
+    display: flex;
     font-weight: 600;
     font-size: 12px;
     color: #747474;
+    user-select: none;
+    margin-left: 10px;
 }
 
 .accountDialog_container_right_info_block_text{
@@ -155,7 +177,22 @@
     font-weight: 500;
     color: #ececec;
     column-gap: 10px;
+    user-select: none;
+    padding: 5px 10px;
 }
+
+.accountDialog_container_right_info_block_text_input{
+    font-size: 14px;
+    font-weight: 500;
+    color: #ececec;
+    column-gap: 10px;
+    border: none;
+    padding: 5px 10px;
+    background: rgba(0, 0, 0, 0.22);
+    border-radius: 6px;
+    outline: none;
+}
+
 
 .accountDialog_container_right_info_block_change_button{
     padding: 10px 20px;
