some fix + alert in account dialog

--- a/src/app/welcome/welcomePage.css
+++ b/src/app/welcome/welcomePage.css
@@ -15,7 +15,7 @@
     overflow: hidden;
     width: 100%;
     object-fit: cover;
-    background-image: url("https://cdn.discordapp.com/attachments/1109761605010477137/1110893586989465600/-1_.png");
+    background-image: url("/welcome-background.webp");
     background-size: cover;
     font-weight: 580;
 }
