--- a/src/components/header/accountDialog/accountDialog.css
+++ b/src/components/header/accountDialog/accountDialog.css
@@ -23,8 +23,8 @@
 .accountDialog_container {
     display: flex;
     flex-direction: row;
-    width: fit-content;
-    height: fit-content;
+    width: 771px;
+    height: 430px;
     padding: 40px 20px;
     background: #1a1a1a;
     border-radius: 20px;
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
 
@@ -45,11 +45,16 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    width: 100%;
-    height: 100%;
+    width: 520px;
+    height: 350px;
+    min-height: 350px;
+    min-width: 520px;
 }
 
 .accountDialog_container_separator{
+    display: flex;
+    align-self: flex-start;
+    justify-self: flex-start;
     width: 1px;
     height: 300px;
     background: #464646;
@@ -232,4 +237,69 @@
 
 .accountDialog_container_right_info_block_exit_button:hover{
     background: crimson;
+}
+
+.accountDialog_container_right_info_block_no_subscription_text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 70px;
+}
+
+.accountDialog_container_right_info_block_no_subscription_text.no_subscription {
+    position: absolute;
+    align-items: unset;
+    justify-content: unset;
+    margin-top: 80px;
+}
+
+.accountDialog_container_right_info_block_subscription_body{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+.accountDialog_container_right_info_block_subscription_header{
+    font-size: 15px;
+}
+
+.accountDialog_container_right_info_block_code_activate{
+    margin-top: 20px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+
+.accountDialog_container_right_info_block_code_input{
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+.accountDialog_container_right_info_block_code_container{
+    display: flex;
+    flex-direction: column;
+}
+
+.accountDialog_container_right_info_block_active_code_button{
+    padding: 5px;
+    border-radius: 5px;
+    font-size: 13px;
+    margin-top: 10px;
+    background: #272727;
+    margin-left: 10px;
+    cursor: pointer;
+    user-select: none;
+    color: #D1D1D1;
+    transition: .3s;
+}
+
+.accountDialog_container_right_info_block_active_code_button:hover{
+    background: #313131;
+    color: white;
 }
