--- a/src/components/auth/authContainer.css
+++ b/src/components/auth/authContainer.css
@@ -58,7 +58,7 @@
 }
 
 .authContainer.activePasswordRepeat{
-    height: 300px;
+    height: 320px;
 }
 
 .authTitle{
@@ -66,7 +66,7 @@
     display: flex;
     font-size: 30px;
     font-weight: 600;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     margin-top: 30px;
 }
 
@@ -166,4 +166,32 @@
 
 .authInput.repeatPassword.active{
     scale: 1;
+}
+
+
+.agreement_block {
+    width: 100%;
+
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    display: flex;
+    align-items: center;
+
+    padding: 0 30px 0 30px;
+
+    word-break: break-all;
+}
+
+.agreement_block input {
+}
+
+.agreement_block a{
+    color: var(--accent-color);
+}
+
+.agreement_block_2 {
+    margin-left: 10px;
+    width: fit-content;
 }
