--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -206,6 +206,16 @@
         display: flex;
     }
 }
+@media screen and (max-width:768px) {
+    .header {
+        display: none;
+    }
+
+    .header_mobile {
+        display: flex;
+        z-index: 10000;
+    }
+}
 
 /* десктопы и ноутбуки, в которых основным механизмом ввода является мышь или тачпад */
 @media (hover: hover) and (pointer: fine) {
